# notes

./: .dockerignore  .env.desktop  .env.e2e  .env.web  .eslintrc.yaml  .gitignore  .prettierignore  Dockerfile  README.md  cypress.config.ts  docker-compose.e2e.yml  docker-compose.yaml  docker-compose.yml  eslint.config.mjs  index.html  local.ini  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.d.ts  vitest-setup.ts
.github/workflows/: build-and-release-android.yml  build-and-release.yml  deploy-web.yml  main.yml  run-e2e.yml  run-unit-tests.yml  test-build-on-pr.yml
.husky/: pre-commit
couchdb/: local.ini
cypress/constants/: data.ts  dimensions.ts  index.ts  locators.ts
cypress/e2e/: app.cy.ts  dialogs.cy.ts  editor.cy.ts  flow.cy.ts  sidebar.cy.ts
cypress/support/: e2e.ts  index.d.ts
cypress/utils/: clear-indexed-db.ts  index.ts
playwright/constants/: data.ts  dimensions.ts  index.ts  locators.ts
playwright/e2e/: debug-autosave.spec.ts  debug-resize.spec.ts  debug-sidebar.spec.ts  dialogs.spec.ts  editor.spec.ts  flow.spec.ts  sidebar.spec.ts  sync.spec.ts
playwright/fixtures/: index.ts
playwright/utils/: clear-indexed-db.ts  wait-for-sync.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-updater.json  http.json
src-tauri/src/: lib.rs  main.rs
src-ui/: config.ts  const.ts  editor-buttons.ts  editor.ts  enums.ts  index.css  index.ts  main.css  toggle-active-class.ts  toggle-is-active-css.ts  types.ts
src-ui/api/: allowed-tauri-apis.ts  index.ts  interfaces.ts
src-ui/components/: get-started.ts  index.ts  sidebar-note-list.ts  sidebar.ts
src-ui/database/: database.ts  index.ts  use-database-details.spec.ts  use-database-details.ts  use-remote-details.spec.ts  use-remote-details.ts
src-ui/db/: index.ts
src-ui/editor/: create-editor-buttons.ts  create-editor.ts  editor-buttons.ts  editor.ts  index.ts  set-editor-content.ts  toggle-active-editor-class.ts
src-ui/event/: create-event.ts  enums.ts  events.ts  index.ts
src-ui/event-emitters/: emit-selected-note.ts  index.ts
src-ui/events/: index.ts
src-ui/layout/: index.ts  scaffold.ts  sidebar.ts
src-ui/logger/: index.ts  logger.spec.ts  logger.ts
src-ui/renderer/: client.ts  footer.ts  get-started.ts  index.ts  scaffold-body.ts  scaffold-sidebar.ts  sidebar-note-list.ts
src-ui/store/: editor-store.ts  index.ts  note-store.ts  status-store.ts
src-ui/styles/: index.css  sidebar.css
src-ui/tauri/: index.ts  update.ts
src-ui/test-utils/: index.ts  render-component.ts  render.ts
(+117 files in other folders)
